tests/ui/reserved_name.stderr
error: reserved name
 --> $DIR/reserved_name.rs:3:12
  |
3 |     struct UniquePtr {
  |            ^^^^^^^^^

error: reserved name
 --> $DIR/reserved_name.rs:9:14
  |
9 |         type Box; // invalid; `Box` is a builtin
  |              ^^^
